# ProtoAlpha

./: .gitignore  CMakeLists.txt  ProtoAlpha.vcxproj  ProtoAlpha.vcxproj.filters  README.md
src/alpha/: Main.cpp
src/alpha/internal/qt/: Window.cpp  Window.hpp
